	  Due is now ready to begin test (2013-6-17).
	* configs/arduino-due/nsh:  Add an NSH configuration for the Arduino
	  Due.  Both the OS test and NSH configuration are now functional
	  (2013-6-28).
	* configs/arduino-due/src:  Add support for the "L" LED (2013-6-28).
	* arch/arm/src/sam34/sam_allocateheap.c:  Clocking must be applied
	  to the SMC module for the 3X and 3A family in order for the NFC
	  SRAM to be functional (2013-6-28).
	* arch/arm/src/sam34/sam3u_gpio.c:  Need to disable write
	  protection before configuring PIO pins.
	* configs/sam3u-ek/nsh:  The touchscreen is now function.  The above
	  fix to the sam3u_gpio.c write protection also fixed the touchscreen
	  problem (2013-6-28).
	* confgis/sam3u_ek/nxwm:  Created a configuration for the NxWM
	  window manager for the SAM3U-EK board (2013-6-29).
	* drivers/spi and include/nuttx/spi:  New sub-directories to hold
	  SPI-related files.  includes/nuttx/spi.h moved to include/nuttx/spi/.;
	  SPI-related Kconfig info moved from drivers/Kconfig to drivers/spi/kconfig
	  (2013-7-1).
	* drivers/spi/spi_bitbang.c and include/nuttx/spi/spi_bitbang.h:  Add
	  support for a generic bit-bang SPI driver.  This checkout is the
	  common upper-half logic.  Still missing the lower half (2013-7-1).
	* include/nuttx/spi/spi_bitbang.c:  This is the common lower-half bit-
	  bang SPI logic (2013-7-1).
	* configs/arduino-due/src/sam_nsh.c and sam_mmcsd.c:  Add NSH customize
	  initialization.  If so configured, initialize the SPI bit bang
	  interface to the MMC/SD slot on the ITEAD shield (2013-7-1).
	* fs/fs_mount.c:  Fix compilation error if no file systems are enabled:
	  Change error to ERROR (2013-7-3).
	* arch/arm/src/sam34/sam_gpioirq.c:  Fix some errors for interrupts
	  on ports D-F (2013-7-3).
	* /drivers/usbdev/composite.c: Fix a type in the composite device
	  driver unitialization logic.  DEV1 should be DEV2 in one case
	  (2013-7-4).
